<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:text="@string/susunan_pemain"/>

    <android.support.v7.widget.CardView
        style="@style/Lineup"
        card_view:cardCornerRadius="4dp">

        <LinearLayout style="@style/LineupCardContent">

            <TextView
                android:id="@+id/home_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/OneWeightItems"
                    android:text="@string/penjaga_gawang"/>

                <TextView
                    android:id="@+id/home_goalkeeper"
                    style="@style/LineupPlayer"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/OneWeightItems"
                    android:text="@string/pemain_belakang"/>

                <TextView
                    android:id="@+id/home_defense"
                    style="@style/LineupPlayer"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView style="@style/Lineup">

        <LinearLayout style="@style/LineupCardContent">

            <TextView
                android:id="@+id/away_team_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/OneWeightItems"
                    android:text="@string/penjaga_gawang"/>

                <TextView
                    android:id="@+id/away_goalkeeper"
                    style="@style/LineupPlayer"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">

                <TextView
                    style="@style/OneWeightItems"
                    android:text="@string/pemain_belakang"/>

                <TextView
                    android:id="@+id/away_defense"
                    style="@style/LineupPlayer"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</merge>